--- a/Menu.html
+++ b/Menu.html
@@ -8,5 +8,18 @@
 <h1>Cabecera Nueva 02</h1>
 <p>This is a paragraph.</p>
 
+<h1>The input element</h1>
+
+<form action="/Menu.html">
+  <label for="fname">First name:</label>
+  <input type="text" id="fname" name="fname"><br><br>
+  <label for="lname">Last name:</label>
+  <input type="text" id="lname" name="lname"><br><br>
+  <input type="submit" value="Submit">
+</form>
+
+
+
+
 </body>
 </html>
