--- a/Menu.html
+++ b/Menu.html
@@ -8,7 +8,7 @@
 <h1>Cabecera Nueva 02</h1>
 <p>This is a paragraph.</p>
 
-<h1>The input element</h1>
+<h1>Otra</h1>
 
 <form action="/Menu.html">
   <label for="fname">First name:</label>
