Cambio en color de boton

--- a/Menu.html
+++ b/Menu.html
@@ -19,6 +19,14 @@ $(function(){
   });
 
 
+  $("#otra").hover(function(){
+
+    $("#btn").css("background-color","#000000");
+    $("#btn").css("color","#ffffff");
+
+
+  });
+
 });
 </script>
 </head>
@@ -27,7 +35,7 @@ $(function(){
 <h1>Cabecera Nueva 02</h1>
 <p>This is a paragraph.</p>
 
-<h1>Otra</h1>
+<h1 id="otra">Otra</h1>
 
 <form action="">
   <label for="fname">First name:</label>
