Se agrego boostrap en master

--- a/Menu.html
+++ b/Menu.html
@@ -2,7 +2,15 @@
 <html>
 <head>
 <link rel="stylesheet" href="estilo.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+
 <script>
 
 $(function(){
@@ -21,7 +29,7 @@ $(function(){
   });
 
   $("h1").mouseenter(function(){
-    $("p").toggle();
+    $("#pinestable").toggle();
 
   });
 
@@ -38,12 +46,15 @@ $(function(){
 </script>
 </head>
 <body>
+  <div class="jumbotron text-center">
+    
   <div id="div1"></div><br>
   <div id="div2"></div><br>
   <div id="div3"></div>
+      
 
 <h1>Cabecera Nueva 02</h1>
-<p>This is a paragraph.</p>
+<p id="pinestable">This is a paragraph.</p>
 
 <h1 id="otra">Otra</h1>
 
@@ -58,8 +69,32 @@ $(function(){
 
 </form>
 
-<button id="btn">Mostrar</button>
+<button type="button" class="btn btn-success" id="btn">Mostrar</button>
 
+
+  <h1>My First Bootstrap Page</h1>
+  <p>Resize this responsive page to see the effect!</p> 
+</div>
+  
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+      <h3>Column 1</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>Column 2</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>Column 3</h3>        
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+  </div>
+</div>
 
 
 
